--- a/index.html
+++ b/index.html
@@ -10,25 +10,33 @@
 </head>
 
 <body>
-  <div><img src="images/phones.png" alt="phones"></div>
-  <div>
-    <div>
+
+  <main>
+  <section class="left">
+    <div><img src="images/phones.png" alt="phones"></div>
+  </section>
+
+  <section class ="right">
+    <div class ="header">
       <h1><img src="images/brand.png" alt='Instagram'></h1>
+      <div id="button"><img src="images/home.png" alt="Log in"> Log in</div>
     </div>
-    <div><img src="images/home.png" alt="Log in"> Log in</div>
-    <div>
+
+      <div>
       <h2>Capture and Share the World's Moments</h2>
-      <p>Instagram is a fast, beautiful and fun way to share your life
-        with
-        friends and family.</p>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life
+        with friends and family.</p>
       <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
         &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
         world.</p>
       <p>Oh yeah, did we mention it's free?</p>
       <div><img src="images/badge-iphone.png" alt="Download on the App Store" href="#"><img
           src="images/badge-android.png" alt="Get it on Google Play " href="#"></div>
+      </div>
     </div>
-  </div>
+</section>
+</main>
+
   <div><a href="#">About Us</a> <a href="#">Support</a> <a href="#">Blog</a> <a href="#">Press</a> <a href="#">API
     </a><a href="#">Jobs</a><a href="#">Privacy </a><a href="#">Terms</a>&copy; 2014 Instagram</div>
 </body>
