--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link href="/styles/style.css" rel="stylesheet" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main_part">
+      <div class="phones_img">
+        <img src="images/phones.png" alt="Phones" />
+      </div>
+      <div class="text_part">
+        <div class="title">
+          <img class="logo" src="images/brand.png" alt="Instagram Logo" />
+          <div class="button">
+            <img src="images/home.png" alt="Home" />
+            <p>Log in</p>
+          </div>
+        </div>
+        <div class="frame">
+          <h1>Capture and Share<br/> the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="get_it_btn">
+            <img
+              src="images/badge-iphone.png"
+              alt="Download on the App Store"
+            />
+            <img src="images/badge-android.png" alt="Get it on Google Play" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
