--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="main">
+      <img src="./images/phones.png"/>
+      <div>
+      <img src="./images/brand.png" alt="Brand" />
+      <button type="Login"><img src="./images/home.png" alt="Home">   Log in</button>
+      <div class="text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family. <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+            Oh yeah, did we mention it's free?</p>
+        </div>
+      <img src="./images/badge-iphone.png" alt="Badge Iphone"/>
+      <img src="./images/badge-android.png" alt="Badge Android"/>
+    </div>
+    </section>
+    <footer>
+        <ul>
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>BLOG</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+    </footer>
   </body>
 </html>
