--- a/index.html
+++ b/index.html
@@ -5,12 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href='./styles/style.css'>
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <img src='./images/phones.png' alt='Phones'>
+      <div>
+        <div id='divprinc'>
+          <img src='./images/brand.png' alt='logo'> 
+          <a href='#login'><img src='./images/home.png' alt='Login'>Log in</a>  
+        </div>
+        <div id='divsec'>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play</p>
+          
+          <img src='./images/badge-iphone.png' alt='appstore'><img src='./images/badge-android.png' alt='androidstore'>
+        </div>
+      </div>
+  </section>
+  
+  <footer>
+    <ul>
+      <li><a href='#aboutus'>About Us</a></li>
+      <li><a>Support</a></li>
+      <li><a>Blog</a></li>
+      <li><a>Press</a></li>
+      <li><a>API</a></li>
+      <li><a>Jobs</a></li>
+      <li><a>Privacy</a></li>
+      <li><a>Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
   </body>
 </html>
