--- a/index.html
+++ b/index.html
@@ -8,21 +8,28 @@
   </head>
   <body>
     <section class="main">
-      <img src="./images/phones.png"/>
-      <div>
-      <img src="./images/brand.png" alt="Brand" />
-      <button type="Login"><img src="./images/home.png" alt="Home">   Log in</button>
-      <div class="text">
-        <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+      <img class="iphone" src="./images/phones.png" alt="Iphones" width="290"/>
+      <div class="info">
+        <div class="button-brand">
+          <img src="./images/brand.png" alt="Brand"/>
+          <div class="button">
+            <img src="./images/home.png" alt="Home" width="20">
+            <h4>Log in</h4>
+          </div>
+        </div>
+        <div class="text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
             friends and family. <br>
+            <br>
             Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+            <br>
             Oh yeah, did we mention it's free?</p>
+          <img class="ios" src="./images/badge-iphone.png" alt="Badge Iphone"/>
+          <img class="android" src="./images/badge-android.png" alt="Badge Android"/>
         </div>
-      <img src="./images/badge-iphone.png" alt="Badge Iphone"/>
-      <img src="./images/badge-android.png" alt="Badge Android"/>
-    </div>
+      </div>
     </section>
     <footer>
         <ul>
@@ -34,7 +41,7 @@
           <li>JOBS</li>
           <li>PRIVACY</li>
           <li>TERMS</li>
-          <li>&copy; 2014 Instagram</li>
+          <li class="copyright">&copy; 2014 Instagram</li>
         </ul>
     </footer>
   </body>
