--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="second-div">
       <div class="images-section">
-        <img src="./images/brand.png" alt="brand">
-        <button><img src="./images/home.png" alt="home">Log in</button>
+        <img class="instagran-image" src="./images/brand.png" alt="brand">
+        <button class="home-button"><img class="home-image" src="./images/home.png" alt="home">Log in</button>
       </div>
 
       <div class="frame">
@@ -31,9 +31,9 @@
         <p>Oh yeah, did we mention it's free? </p>
       </div>
 
-      <div>
-        <button>Download on the App Store</button>
-        <button>Get it on Google Play</button>
+      <div class="app-images">
+        <button class="app-store-button"><img class="app-store-image" src="./images/badge-iphone.png" alt=""></button>
+        <button class="google-play-button"><img class="google-play-image" src="./images/badge-android.png" alt=""></button>
       </div>
     </div>
   </section>
@@ -48,7 +48,7 @@
       <li>API</li>
       <li>Privacy</li>
       <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li class="instagran-logo">&copy; 2014 Instagram</li>
     </ul>
   </footer>
 </body>
