--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <img src="./images/phones.png" alt="phones" width="320px">
+      <div class="content">
+        <header>
+          <img src="./images/brand.png" alt="logo" height="56px">
+          <button>
+            <img src="./images/home.png" alt="home">
+            Log in
+          </button>
+        </header>
+        <div class="container">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - It's that easy. You can even share to Facebook, Twitter, Tumblr, and more. It's a new way to see the world.;<br><br>
+          Oh yeah, did we mention it's free?</p>
+          <div id="download">
+            <img src="./images/badge-iphone.png" alt="Appstore download" height="40px">
+            <img src="./images/badge-android.png" alt="Google play download" height="40px">
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
