Ejercicio Terminado, Mai Yvan y Adriano

--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="/styles/style.css">
+</head>
+
+<body>
+    <div class="background">
+    </div>
+    <div class="contenido">
+        <div class="celulares">
+            <img src="/images/phones.png" alt="celulares">
+        </div>
+        <div class="logos">
+            <div class="img-instagram">
+                <img src="images/brand.png" alt="brandimage-instagram">
+                <button><img src="images/home.png" alt=""><h3>Log in</h3></button>
+            </div>
+            <div class="contenido-text">
+                <h2>Capture and Share the World's Moments </h2>
+                <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p class="last-paragraph">Oh yeah, did we mention it's free?</p>
+                <div>
+                    <img src="images/badge-iphone.png" alt="app" id="iphone-badge">
+                    <img src="images/badge-android.png" alt="google">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <ul class="list">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li>&copy; 2014 Instagram</li>
+        </ul>
+    </footer>
+</body>
+
 </html>
