--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+    <div id="main">
+        <div class="gradient">
+            <div class="phones">
+                <img src="./images/phones.png" alt="">
+            </div>
+            <div class="brand">
+                <img src="./images/brand.png" alt="">
+            </div>
+            <div class="button">
+                <div class="flex"><img src="./images/home.png" alt=""><span class="span">Log in</span></div>
+            </div>
+
+            <div class="info">
+                <h1 class="h1">Capture and Share <br>the World's Moments</h1>
+                <p class="para">
+                    Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+                    <p class="para">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p class="para">Oh yeah, did we mention it's free?
+                    </p>
+            </div>
+
+
+            <img src="./images/badge-iphone.png" alt="" class="logoiPhone">
+            <img src="./images/badge-android.png" alt="" class="logoAndroid">
+
+            <footer class="footer">
+                <p>About Us&nbsp;&nbsp;&nbsp; Support &nbsp;&nbsp;&nbsp; Blog&nbsp; &nbsp;&nbsp; Press &nbsp;&nbsp;&nbsp; API &nbsp;&nbsp;&nbsp; Jobs &nbsp;&nbsp;&nbsp; Privacy&nbsp;&nbsp;&nbsp; Terms
+                    <span class="instagram"> &copy; 2014 Instagram </span></p>
+            </footer>
+        </div>
+    </div>
+</body>
+
 </html>
