--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="/styles/style.css">
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+</head>
+
+<body>
+    <div id="upperBackground">
+    </div>
+    <div id="lowerBackground">
+    </div>
+    <div id="principal">
+        <div id="overflow-content">
+            <div>
+                <img src="images/phones.png" alt="phones" id="phones">
+            </div>
+            <div id="infoContent">
+                <div id="headerInsta">
+                    <img src="images/brand.png" alt="instagramTitle" id="instagram">
+                    <button class="button"> <img src="images/home.png" alt="home"> <p>Log in</p></button>
+                </div>
+                <div id="info">
+                    <h2>Capture and Share <br> the World's Moments</h2>
+                    <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. <br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You
+                        can even share to Facebook, Twitter,Tumblr and more. It's a new way to see the world. <br><br> Oh yeah, did we mention it's free?</p>
+                </div>
+                <div class="imagesButtons">
+                    <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store" class="imageButtonsImg"></a>
+                    <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play" class="imageButtonsImg"></a>
+                </div>
+            </div>
+            <div class="footerMenu">
+                <a href="#"><b>ABOUT US</b></a>
+                <a href="#"><b>SUPPORT</b></a>
+                <a href="#"><b>BLOG</b></a>
+                <a href="#"><b>PRESS</b> </a>
+                <a href="#"><b>API</b></a>
+                <a href="#"><b>JOBS</b></a>
+                <a href="#"><b>PRIVACY</b></a>
+                <a href="#"><b>TERMS</b></a>
+                <p>&copy; 2014 Instagram</p>
+            </div>
+        </div>
+
+    </div>
+</body>
+
 </html>
