Empecé desde cero nuevamente

--- a/index.html
+++ b/index.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="styles/style.css">
+
+</head>
+
+<body>
+    <header id="header">
+        <div></div>
+    </header>
+    <section>
+        <div id="main-frame">
+            <div id="iphone">
+                <img src="../images/phones.png" alt="iphone">
+            </div>
+            <div id="content">
+                <div class="logo-login">
+                    <img src="./images/brand.png" alt="Instagram">
+                    <img src="./images/home.png" alt="">
+                </div>
+                <div class="info">
+                    <h1>Instagram Capture and Share the World's Moments</h1>
+                    <p>
+                        Instagram is a fast, beautiful and fun way to share your
+                        life with friends and family. Take a picture or video, choose a filter to transform its look and
+                        feel, then
+                        post to Instagram &mdash; it's that easy.
+                        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    </p>
+                    <p>
+                        Oh yeah, did we
+                        mention it's free?
+                    </p>
+                </div>
+                <div class="stores">
+                    <img src="../images/badge-iphone.png" alt="Appstore">
+                    <img src="../images/badge-android.png" alt="Play Store">
+                </div>
+
+            </div>
+            Download on the App Store Get it on Google Play
+
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Support</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Press</a></li>
+                <li><a href="">API</a></li>
+                <li><a href="">Jobs</a></li>
+                <li><a href="">Privacy Terms</a></li>
+                <li>&copy; 2014 Instagram</li>
+            </ul>
+        </nav>
+    </footer>
+</body>
+
 </html>
