--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <img src="./images/brand.png" alt="Instagram">
                     <img src="./images/home.png" alt="">
                 </div>
+                <div class="background">
                 <div class="info">
                     <h1>Instagram Capture and Share the World's Moments</h1>
                     <p>
@@ -38,17 +39,18 @@
                         mention it's free?
                     </p>
                 </div>
+                </div>
                 <div class="stores">
                     <img src="../images/badge-iphone.png" alt="Appstore">
                     <img src="../images/badge-android.png" alt="Play Store">
                 </div>
 
             </div>
-            Download on the App Store Get it on Google Play
+            <!--Download on the App Store Get it on Google Play-->
 
         </div>
     </section>
-    <footer>
+    <footer id="footer">
         <nav>
             <ul>
                 <li><a href="">About Us</a></li>
