Hasta aquí nos quedamos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="content">
                 <div class="logo-login">
                     <img src="./images/brand.png" alt="Instagram">
-                    <img src="./images/home.png" alt="">
+                    <a class="login" href="#"><img src="./images/home.png" alt="Login">Login</a>
                 </div>
                 <div class="background">
                 <div class="info">
