--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </div>
         <div class="text">
           <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
-            friends and family. <br>
-            <br>
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
-            <br>
-            Oh yeah, did we mention it's free?</p>
+          <div>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and family</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
           <img class="ios" src="./images/badge-iphone.png" alt="Badge Iphone"/>
           <img class="android" src="./images/badge-android.png" alt="Badge Android"/>
         </div>
