--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <div id="background">
+    <div class="content-container">
+      <img src="./images/phones.png" alt="mobile-phones">
+      <div class="text-container">
+        <div class="title-container">
+          <img src="./images/brand.png" alt="instagram-logo">
+          <div class="login-button">
+            <img src="./images/home.png" alt="house">
+            <a href="./login">Log In</a>
+          </div>
+        </div>
+        <div class="pitch-container">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free? 
+          </p>
+          <div class="store-buttons-container">
+              <a href="./applestore"><img src="./images/badge-iphone.png" alt="applestore"></a>
+              <a href="./googlestore"><img src="./images/badge-android.png" alt="googlestore"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <footer>
+    <ul>
+      <li><a href="./aboutus">ABOUT US</a></li>
+      <li><a href="./support">SUPPORT</a></li>
+      <li><a href="./blog">BLOG</a></li>
+      <li><a href="./press">PRESS</a></li>
+      <li><a href="./api">API</a></li>
+      <li><a href="./jobs">JOBS</a></li>
+      <li><a href="./privacy">PRIVACY</a></li>
+      <li><a href="./teams">TEAMS</a></li>
+      <li> © 2014 INSTAGRAM</li>
+    </ul>
+    
+  </footer>
+</div>
+    </body>
 </html>
