--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Instagram Clone</title>
+		<link rel="stylesheet" href="/styles/style.css" />
+	</head>
+	<body>
+		<div class="bgblue"></div>
+		<main>
+			<div class="content">
+				<img src="./images/phones.png" alt="phone img" />
+			</div>
+			<div class="landing-content">
+				<nav class="navbar">
+					<img class="nav-logo" src="./images/brand.png" alt="brand" />
+					<a class="nav-button" href="#">
+						<img class="nav-icon" src="./images/home.png" alt="home" />
+						<span>Log in</span>
+					</a>
+				</nav>
+				<div class="description">
+					<h1 class="description-title">Capture and Share the World's Moments</h1>
+					<p>
+						Instagram is a fast, beautiful and fun way to share your life with friends and family.
+					</p>
+					<p>
+						Take a picture or video, choose a filter to transform its look and feel, then post to
+						Instagram &mdash;it's that easy. You can even share to Facebook, Twitter, Tumblr and
+						more. It's a new way to see the world.
+					</p>
+					<p>Take Oh yeah, did we mention it's free?</p>
+					<div class="call-to-action">
+						<a href="#">
+							<img src="./images/badge-iphone.png" alt="iphone store" />
+						</a>
+						<a href="#">
+							<img src="./images/badge-android.png" alt="android store" />
+						</a>
+					</div>
+				</div>
+			</div>
+		</main>
+		<footer>
+			<ul>
+				<li>About Us</li>
+				<li>Support</li>
+				<li>Blog</li>
+				<li>Press</li>
+				<li>API</li>
+				<li>Jobs</li>
+				<li>Privacy</li>
+				<li>Terms</li>
+				<li>&copy; 2014 Instagram</li>
+			</ul>
+		</footer>
+	</body>
 </html>
