--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
         <div class="pitch-container">
           <h1>Capture and Share the World's Moments</h1>
           <p>
-            Instagram is a fast, beautiful and fun way to share your life with
-            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family. <br> 
+          </p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+          </p>
+          <p>
             Oh yeah, did we mention it's free? 
           </p>
           <div class="store-buttons-container">
