--- a/index.html
+++ b/index.html
@@ -5,12 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div>
+      <img class="blue-background" src="/images/bgtile.png" alt="background" />
+    </div>
+    <div class="wrapper">
+      <article class="main">
+        <div>
+          <img src="/images/phones.png" alt="two-Phones" />
+        </div>
+        <div class="info">
+          <div class="insta-log">
+            <img src="/images/brand.png" alt="Instagram" />
+            <button><img src="/images/home.png" alt="house" />Log In</button>
+          </div>
+          <div class="background">
+            <div class="main-text">
+              <h2 class="headline">Capture and Share the World's Moments</h2>
+              <p>
+                Instagram is a <strong>fast, beautiful</strong> and
+                <strong>fun</strong> way to share your life with friends and
+                family.
+              </p>
+              <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+            <div class="store-icons">
+              <img
+                src="/images/badge-iphone.png"
+                alt="Download on the App Store"
+              />
+              <img
+                src="/images/badge-android.png"
+                alt="Get it on Google Play"
+              />
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <div>
+        <nav>
+          <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li id="copyright">&copy; 2014 Instagram</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </body>
 </html>
