fix relative links.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
     <main>
       <figure>
-        <img src="/images/phones.png" alt="Old iPhones">
+        <img src="./images/phones.png" alt="Old iPhones">
       </figure>
       <section>
         <header>
-          <img src="/images/brand.png" alt="Instagram Logo">
+          <img src="./images/brand.png" alt="Instagram Logo">
           <button>
-            <img src="/images/home.png" alt="House icon">
+            <img src="./images/home.png" alt="House icon">
             Log in
           </button>
         </header>
@@ -26,8 +26,8 @@
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
           <div>
-            <a href="#"><img src="/images/badge-iphone.png" alt="App Store Button"></a>
-            <a href="#"><img src="/images/badge-android.png" alt="Google Play Button"></a>
+            <a href="#"><img src="./images/badge-iphone.png" alt="App Store Button"></a>
+            <a href="#"><img src="./images/badge-android.png" alt="Google Play Button"></a>
           </div>
         </article>
       </section>
