--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="info">
           <div class="insta-log">
             <img src="/images/brand.png" alt="Instagram" />
-            <button><img src="/images/home.png" alt="house" />Log In</button>
+            <button class="myButton"><img src="/images/home.png" alt="house" /> <span class="button-text">Log In</span></button>
           </div>
           <div class="background">
             <div class="main-text">
