--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
           </button>
         </header>
         <article>
-          <h2>Capture and Share<br>the World's Moments</h2>
-          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
-          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-          <p>Oh yeah, did we mention it's free?</p>
           <div>
-            <a href="#"><img src="./images/badge-iphone.png" alt="App Store Button"></a>
-            <a href="#"><img src="./images/badge-android.png" alt="Google Play Button"></a>
+            <h2>Capture and Share<br>the World's Moments</h2>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div>
+              <a href="#"><img src="./images/badge-iphone.png" alt="App Store Button"></a>
+              <a href="#"><img src="./images/badge-android.png" alt="Google Play Button"></a>
+            </div>
           </div>
         </article>
       </section>
