--- a/index.html
+++ b/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <main>
+    <img src="./images/phones.png" alt="phones">
+    <section>
+
+
+
+      <header>
+        <img src="./images/brand.png" alt="logo">
+        <div class='house-sec'>
+          <a class='house'href="#"><img src="./images/home.png" alt="house"></a>
+          <a class='log'href="#">Log in</a>
+        </div>
+      </header>
+
+
+
+
+
+      <article>
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <figure>
+          <img src="./images/badge-iphone.png" alt="iphone"><img class='center-icon'src="./images/badge-android.png" alt="android">
+        </figure>
+
+      </article>
+
+    </section>
+  </main>
+  <footer>
+    <ul>
+      <li>about us</li>
+      <li>support</li>
+      <li>blog</li>
+      <li>press</li>
+      <li>api</li>
+      <li>jobs</li>
+      <li>privacy</li>
+      <li>terms</li>
+      <li class='copy'>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
+
+
+
+
+
+</body>
+
 </html>
