create HTML elements, style with css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="content">
+      <section class="phones">
+        <img src="images/phones.png" alt="mobile phones" />
+      </section>
+      <section class="content-text">
+        <header>
+          <img  src="images/brand.png" alt="instagram logo" class="logo" />
+          <a href="#">
+            <img src="images/home.png" alt="home icon" />
+            <p>Log in</p>
+          </a>
+        </header>
+        
+        <section class="description">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast, beautiful</strong> and
+            <strong>fun</strong> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <section class="app-links">
+            <img src="images/badge-iphone.png" alt="app store logo" /><img
+              src="images/badge-android.png"
+              alt="google play logo"
+            />
+          </section>
+        </section>
+      </section>
+    </section>
+
+    <footer>
+      <nav>
+        <a href="#">about us</a>
+        <a href="#">support</a>
+        <a href="#">blog</a>
+        <a href="#">press</a>
+        <a href="#">api</a>
+        <a href="#">jobs</a>
+        <a href="#">privacy</a>
+        <a href="#">terms</a>
+      </nav>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
