--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <!-- Section 1-->
+      <section class="section1">
+        <img src="./images/phones.png" alt="phone">
+      </section>
+      <!-- Section 2-->
+      <section class="section2">
+        <div class="instagram-login">
+          <img src="./images/brand.png" alt="logo instagram">
+          <div class="login">
+            <img src="./images/home.png" alt="home login">
+            <a href="#">Log in</a>
+          </div>
+        </div>
+        <div class="text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast,  beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="apps">
+            <img src="./images/badge-iphone.png" alt="badge iphone">
+            <img src="./images/badge-android.png" alt="badge android">
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <nav> 
+      <a href="#">about us</a>
+      <a href="#">support</a>
+      <a href="#">blog</a>
+      <a href="#">api</a>
+      <a href="#">jobs</a>
+      <a href="#">privacy</a>
+      <a href="#">terms</a>
+      </nav>
+      <p>&copy; 2014 instagram</p>
+    </footer>
   </body>
 </html>
