--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    
+    <main>
+
+      <section>
+        <div>
+          <article class="telefonos-movil">
+            <img src="images/phones.png" alt="Teléfonos móviles">
+          </article>
+
+          <article class="instagram-information">
+
+            <div>
+              <img src="images/brand.png" alt="Logo Instagram">
+              <a class="log-in-btn" href="#"><img src="images/home.png" alt="Imagen casa">Log in</a>
+            </div>
+
+            <div class="description">
+              <h1>Capture and Share<br>the World's Moments</h1>
+              <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>  way to share your life with
+                friends and family.</p>
+              <p>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              </p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+
+            <div class="download-btns">
+              <a href="#"><img src="images/badge-iphone.png" alt="Button for download on the app store"></a>
+              <a href="#"><img src="images/badge-android.png" alt="Button for download on the app store"></a>
+            </div>
+          </article>
+        </div>
+        
+      </section>
+
+      <footer>
+        <nav>
+          <ul>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Api</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+          </ul>
+        </nav>
+        <span>© 2014 Instagram</span>
+      </footer>
+    </main>
   </body>
 </html>
