--- a/index.html
+++ b/index.html
@@ -1,16 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+  <header>
+    <section class="moviles">
+      <img src="./images/phones.png" alt="Dos teléfonos móviles con instagram">
+    </section>
+    <section class="logo_login">
+      <div class="logo">
+        <img src="./images/brand.png" alt="Logotipo de Instagram">
+      </div>
+
+      <div class="login">
+        <img src="./images/home.png" alt="Icono casa">
+        <p>Log in</p>
+      </div>
+    </section>
+  </header>
+
+
+  <main>
+    <section class="text">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to
+        Instagram -it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        world.
+        Oh yeah, did we mention it's free?</p>
+      <div class="install">
+        <a href="#"><img src="./images/badge-iphone.png" alt="Instalar en Iphone"></a>
+        <a href="#"><img src="./images/badge-android.png" alt="Instalar en Android"></a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <nav>
+      <ul>
+        <a href="#">
+          <li>About us</li>
+        </a>
+        <a href="#">
+          <li>Support</li>
+        </a>
+        <a href="#">
+          <li>Blog</li>
+        </a>
+        <a href="#">
+          <li>Press</li>
+        </a>
+        <a href="#">
+          <li>API</li>
+        </a>
+        <a href="#">
+          <li>Jobs</li>
+        </a>
+        <a href="#">
+          <li>Privacy</li>
+        </a>
+        <a href="#">
+          <li>Terms</li>
+        </a>
+        <a>
+          <li>&copy 2014 Instagram</li>
+        </a>
+      </ul>
+    </nav>
+
+  </footer>
+
+</body>
+
 </html>
