--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <img src="images/phones.png" alt="Phones">
+      <div class="principal">
+        <nav class="logNav">
+          <a href="#">
+            <img class= "instaImage" src="images/brand.png" alt="">
+          </a>
+          <a class= "logInButton" href="#">
+            <img src="images/home.png" alt="Home">
+            Log in
+          </a>
+        </nav>
+        <section>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram --- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </section>
+            <nav class= "stores">
+              <a href="">
+                <img src="images/badge-iphone.png" alt="appStore">
+              </a>
+              <a href="">
+                <img src="images/badge-android.png" alt="googleStore">
+              </a>
+            </nav>
+      </div>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Api</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+      </nav>
+      <p>
+        @2014 Instagram
+      </p>
+    </footer>    
   </body>
 </html>
