--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </main>
 
     <footer>
+        <nav>
         <ul>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Support</a></li>
