--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+<head>
+  <title>Instagram</title>
+  <link type="text/css" rel="stylesheet" href="styles/style.css">
+</head>
+<body>
+    <section class="iphone-left">
+      <img src="images/phones.png" width="100%">
+    </section>
+    <section class="text">
+        <img src="images/brand.png" alt="Instagram">
+        <button class="Button"><img src="images/home.png">Log in</button>
+        <div class="text-box">
+         <h1>Capture and Share the World's Moments</h1>
+         <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+         <p>Oh yeah, did we mention it's free?</p>
+         <img id="iphone" src="images/badge-iphone.png" alt="Download on the App Store">
+         <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+    </section>
+    <footer>
+        <ul>
+            <li class="li-items"><a href="#">About Us</li></a>
+            <li class="li-items"><a href="#">Support</li></a>
+            <li class="li-items"><a href="#">Blog</li></a>
+            <li class="li-items"><a href="#">Press</li></a>
+            <li class="li-items"><a href="#">API</li></a>
+            <li class="li-items"><a href="#">Jobs</li></a>
+            <li class="li-items"><a href="#">Privacy</li></a>
+            <li class="li-items"><a href="#">Terms</li></a>
+            <li> 2014 Instagram</li>
+        </ul>
+    </footer>
+</body>
 </html>
