--- a/index.html
+++ b/index.html
@@ -5,12 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+      <header></header>
+      <main class="content-flex">
+        <div id="left-side">
+          <img src="images/phones.png">
+        </div>
+        <div id="right-side">
+          <div id="logo-and-login">
+            <img src="images/brand.png" alt="Instagram logo" id="logo">
+            <a href="https://www.instagram.com/accounts/login/?hl=es" target="_blank" class="button-login"><img src="../images/home.png" id="img-home">Log in</a>
+          </div>
+          <div id="white-box">
+            <heading>
+              <h2>Capture and Share</h2>
+              <h2>the World's Moments</h2>
+            </heading>  
+            <article>
+              <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p> 
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p> 
+            </article>
+          </div> 
+          <div id="badges-app"> 
+            <a href="https://apps.apple.com/es/app/instagram/id389801252" target="_blank"><img src="images/badge-iphone.png" alt="Download on the App Store" class="badges"></a> 
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es" target="_blank"><img src="images/badge-android.png" alt="Get it on Google Play" class="badges"></a> 
+          </div>  
+        </div> 
+      </main>
+      <footer>
+          <nav>
+            <ul>
+              <li><a href="https://about.instagram.com/" target="_blank">About Us</a></li>
+              <li><a href="https://help.instagram.com/" target="_blank">Support</a></li>
+              <li><a href="https://about.instagram.com/blog/" target="_blank">Blog</a></li>
+              <li><a href="https://business.instagram.com/blog?" target="_blank">Press</a></li>
+              <li><a href="https://www.instagram.com/developer/" target="_blank">API</a></li>
+              <li><a href="https://www.instagram.com/about/jobs/" target="_blank">Jobs</a></li>
+              <li><a href="https://www.instagram.com/legal/privacy/" target="_blank">Privacy</a></li>
+              <li><a href="https://www.instagram.com/legal/terms/" target="_blank">Terms</a></li>
+            </ul>
+          </nav>
+          <h5>&copy; 2014 Instagram</h5>   
+      </footer>
   </body>
 </html>
