--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  
+  <div class="maindiv">
+    <div class="homebg">
+      <img  class='phones' src="./images/phones.png" alt="phones">
+    </div>
+
+  <div class="maincontent">
+    <div>
+      <img class="logo" src="./images/brand.png" alt="logo" style="margin-right: 4.6em;">
+
+      <button class="login">Log in</button>
+    </div>
+
+  <section class="infotab">
+    <h1>Capture and Share the World's Moments</h1>
+    <p> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p> Oh yeah, did we mention it's free?</p>
+  </section>
+
+  <div class="appstore">
+    <img src="./images/badge-iphone.png" alt="Download on the App Store" style="margin-right: 20px;">
+    <img src="./images/badge-android.png" alt="Get it on Google Play">
+    </div>
+  </div>
+</div>
+  <footer>
+    <nav>
+      <ul>
+        <li> <a href="#">ABOUT US</a> </li>
+        <li> <a href="#">SUPPORT</a> </li>
+        <li> <a href="#">BLOG</a> </li>
+        <li> <a href="#">PRESS</a></li>
+        <li> <a href="#">API</a></li>
+        <li> <a href="#">JOBS</a></li>
+        <li> <a href="#">PRIVACY</a></li>
+        <li> <a href="#">TERMS</a></li>
+        <li> © 2014 INSTAGRAM</li>
+      </ul>
+    </nav>
+  </footer>
   </body>
 </html>
