--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <body class="container flexVertical">
+    <div class="main container flexHorizontal">
+      <div>
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="presentation container flexVertical">
+        <div class="presentationNav container">
+          <img src="./images/brand.png" alt="brand name and icon">
+          <div class="loginButton container"><img src="./images/home.png" alt="home logo"><a href="">Log in</a></div>
+        </div>
+        <div class="presentationText container flexVertical">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <span class="bold">fast, beautiful</span> and <span class="bold">fun</span> way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="icons container " >
+          <img src="./images/badge-iphone.png" alt="Download it on the appstore" class="icon">
+          <img src="./images/badge-android.png" alt="Get it on Google Play" class="icon">
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <ul class="flexHorizontal container">
+        <li><a href="/"> About Us </a></li>
+        <li><a href="/"> Support </a></li>
+        <li><a href="/"> Blog </a></li>
+        <li><a href="/"> Press </a></li>
+        <li><a href="/"> API</a></li>
+        <li><a href="/"> Jobs </a></li>
+        <li><a href="/"> Privacy </a></li>
+        <li><a href="/"> Terms </a></li>
+        <li><a href="/"> &copy; 2014 Instagram</a></li>
+      </ul>
+    </div>
   </body>
 </html>
